@@ -8,3 +8,8 @@ Change Log (Report #18):
 Added a UI fade whenever the mouse is idle
 Made the mouse disappear whenever the mouse is idle
 Fixed code to allow for custom world sizes rather than just 19200 x 10800
+
+Change Log (Report #19):
+Added a pursuit birb history list
+Added keybinds to navigate the pursuit birb history list
+Added a visual list for the pursuit birb history list
